--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,10 @@ Assets/Scenes/Level 1/Level 1/OcclusionCullingData.asset
 Assets/Scenes/Level 1/Level 1/OcclusionCullingData.asset.meta
 Assets/Scenes/Level 2/Level 2/OcclusionCullingData.asset
 Assets/Scenes/Level 2/Level 2/OcclusionCullingData.asset.meta
+/Assets/Firebase
+/Assets/Plugins/tvOS
+/Assets/Editor Default Resources
+/Assets/ExternalDependencyManager
+/Assets/Plugins/iOS
+/Assets/GeneratedLocalRepo
+/Assets/Plugins/Android
