--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@ Assets/Scenes/Level 2/Level 2/OcclusionCullingData.asset.meta
 /Assets/Plugins/iOS
 /Assets/GeneratedLocalRepo
 /Assets/Plugins/Android
+*.rar
